# autoloop

./: .env.example  README.md  config.toml  pyproject.toml
cli/: plugins.py
core/: auth.py  llm.py
core/evaluator/: checklist.py  diagnosis.py  llm_judge.py  rubric.py
core/orchestrator/: graph.py  nodes.py  state.py
core/parser/: task_spec.py
modules/: base.py  registry.py  router.py
modules/builtin/: content_writer.py
tests/: conftest.py
tests/integration/: test_loop.py
tests/unit/: test_checklist.py  test_diagnosis.py  test_registry.py  test_router.py  test_rubric.py  test_task_spec.py
tui/: app.py  login.py  widgets.py
