[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "tui", "cli"]

[project]
name = "openforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "textual>=0.60",
    "litellm>=1.40",
]

[project.entry-points."openforge.modules"]

[project.scripts]
openforge = "tui.app:main"
openforge-plugins = "cli.plugins:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
